--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@ document.getElementById('out').innerHTML += final;
 }
 </script>
 
-<a href="https://github.com/cavestoryguts/rob2osu">https://github.com/cavestoryguts/rob2osu</a><br/>
+<a href="https://github.com/cavestoryguts/remotespyconverter/">https://github.com/cavestoryguts/remotespyconverter/</a><br/>
 <div id="inputs">
 <div id="1" style="padding:20px;background-color:#fecddd;float:left"><textarea id="timeNumber" style="overflow: hidden" rows="4" cols="20"></textarea><br/>Time Number</div>
 <div id="1" style="padding:20px;background-color:#aecddd;float:left"><textarea id="floatNumber" style="overflow: hidden" rows="4" cols="20"></textarea><br/>Float Number</div>
 <div id="1" style="padding:20px;background-color:#fffddd;float:left"><textarea id="noteNumber" style="overflow: hidden" rows="4" cols="20"></textarea><br/>Note Number</div>
 <div id="1" style="padding:20px;background-color:#eecddd;float:left"><textarea id="lanePosition" style="overflow: hidden" rows="4" cols="20"></textarea><br/>Lane Position</div>
 </div>
-<textarea id="out" style="width:1000px;height:400px" readonly>osu! output</textarea>
+<br/>
+<textarea id="barrier" style="width:9999px;height:0px;visibility:hidden" readonly>osu! output</textarea>
+<textarea id="out" style="width:745px;height:400px" readonly>osu! output</textarea>
 <br/>
 <button id="convertButton" onclick="parser()">Convert!</button><br/><br/><br/>
 </body>
